[package]
name = "num-huarongdao"
version = "0.1.1"
authors = ["chen <chanble_cn@163.com>"]
edition = "2018"
description = "fifteen puzzle lib"
repository = "https://github.com/chanble/num-huarongdao"
homepage = "https://github.com/chanble/num-huarongdao"
readme = "readme.md"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"
